# SegSep

./: README.md  datasets.py  dino_sep.py  loss_acc.py  pyproject.toml  sam_sep.py  train_validate.py
notebooks/: Evaluation_2.ipynb  Evaluation_DINO.ipynb  Evaluation_SAM.ipynb
src/segsep/: datasets.py  dino_sep.py  loss_acc.py  sam_sep.py  sep_tools.py  train_dino_head.py  train_sam_image_encoder.py  train_sam_mask_decoder.py  train_validate.py  utils.py
